@@ -39,6 +39,7 @@ from Products.PloneGetPaid.interfaces import INamedOrderUtility
 
 from Products.PloneGetPaid.interfaces import IGetPaidManagementOptions, IAddressBookUtility
 from Products.PloneGetPaid.i18n import _
+from Products.PloneGetPaid.browser.cart import formatLinkCell
 
 from base import BaseFormView
 import cart as cart_core
@@ -533,7 +534,7 @@ class CheckoutReviewAndPay( BaseCheckoutForm ):
 
     columns = [
         column.GetterColumn( title=_(u"Quantity"), getter=cart_core.LineItemColumn("quantity") ),
-        column.GetterColumn( title=_(u"Name"), getter=cart_core.lineItemURL ),
+        column.GetterColumn( title=_(u"Name"), getter=cart_core.lineItemURL, cell_formatter=formatLinkCell ),
         column.GetterColumn( title=_(u"Price"), getter=cart_core.lineItemPrice ),
         column.GetterColumn( title=_(u"Total"), getter=cart_core.lineItemTotal ),
        ]
